fixed footer and logos sizes

--- a/Project/azienda.html
+++ b/Project/azienda.html
@@ -139,35 +139,36 @@
 <!--call to action phrase END-->
 
     <!--loghi social-->
-    <div class="flex justify-center items-center bottom-1">
-        <a href="https://wa.me/3333578640"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
-        <a href="https://www.instagram.com/freschezzaalvolo/"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 5rem;"> </a>
-        <a href="https://m.me/111272078315078"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 5rem;"> </a>
-    </div>
+  <div class="flex justify-center items-center bottom-1">
+    <a href="https://wa.me/3333578640"> <img src="./IMG/whatsapp_.png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce"> </a>
+   
+    <a href="https://m.me/111272078315078"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce"> </a>
+</div>
      <!--loghi social END-->
 </div>
 </div>
 <!-- call to action for social END-->
 </body>
 <!--footer with company's info-->
-<footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center" style="background: linear-gradient(17deg, rgba(66,6,66,1) 21%, rgba(200,14,188,1) 100%);">
+<footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center lg:flex-row-reverse" style="background: linear-gradient(17deg, rgba(66,6,66,1) 21%, rgba(200,14,188,1) 100%);">
     <!--Loghi-->
-    <div class="flex flex-col justify-between items-center m-5 lg:flex-row">
-       <a href="https://www.abiomed.it/it/"><img src="./IMG/Logo Naturosa vettoriale + R web.gif" alt="Logo associato Naturosa" class="w-20 h-auto bg-white rounded-xl m-2 p-2"></a>
-       <a href="https://www.abiomed.it/it/abiomed-organizzazione-di-produttori-sicilia.html"><img src="./IMG/mini logo Abiomed per web 5x2.png" alt="Logo associato Abiomed" class="rounded-xl m-2"></a>
-   </div>
-   
+    <div class="flex m-5 justify-center">
+       <a href="#"> <img src="./IMG/LinkedIn R.png" alt="icona linkedin png" class="m-2 ml-5 mr-5 hover:animate-bounce max-w-xs" > </a>
+       <a href="https://www.instagram.com/freschezzaalvolo/"> <img src="./IMG/instagram R.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce"> </a>
+       <a href="#"> <img src="./IMG/facebook R.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" > </a>
+ </div>
+ 
   <!--Info-->
   <div class="text-center m-10">
    <h1 class="m-2">Freschezze al volo di Piccione</h1>
    <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
 </div>
-
-<div class="flex m-5">
-   <a href="#"> <img src="./IMG/LinkedIn R.png" alt="icona linkedin png" class="m-2 ml-5 mr-5 hover:animate-bounce max-w-xs" > </a>
-   <a href="https://www.instagram.com/freschezzaalvolo/"> <img src="./IMG/instagram R.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce"> </a>
-   <a href="#"> <img src="./IMG/facebook R.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" > </a>
+<div class="flex flex-col justify-between items-center m-5 lg:flex-row">
+   <a href="https://www.abiomed.it/it/"><img src="./IMG/Logo Naturosa vettoriale + R web.gif" alt="Logo associato Naturosa" class="w-20 h-auto bg-white rounded-xl m-2 p-2"></a>
+   <a href="https://www.abiomed.it/it/abiomed-organizzazione-di-produttori-sicilia.html"><img src="./IMG/mini logo Abiomed per web 5x2.png" alt="Logo associato Abiomed" class="rounded-xl m-2"></a>
 </div>
+
+
  
 
 </footer>
