--- a/Project/azienda.html
+++ b/Project/azienda.html
@@ -76,7 +76,7 @@
 
           <!--pic2 -->
 
-         <div class="mt-10 mb-20 lg:flex lg:items-center lg:flex-row-reverse" style="background-image: url(./IMG/viola\ melanzana\ bg_.png);"> 
+         <div class="mt-10 mb-20 lg:flex lg:items-center lg:flex-row-reverse" style="background-image: url(./IMG/sfondo\ viola\ melanzana.png       );"> 
             <!--Melanzana wrapper-->
             <div class="flex justify-center">
                 <img src="./IMG/illustrazioni freschezze al volo/Agricoltori generazioni illustrazione.png" alt="Famiglia di agricoltori dal nonno al nipote png" class="lg:max-w-3xl">
@@ -89,7 +89,9 @@
                 <h1 class="font-bold italic">Una storia di famiglia dal 1983</h1>
                 <h2>_________</h2>
                
-                    <h2>Da allora tale vocazione è stata custodita e tramandata
+                    <h2> L'azienda viene fondata per iniziativa della famiglia Piccione, dedita da sempre all'agricoltura e alla produzione agricola 
+                        sin da quando Vittoria era il centro siciliano più attivo nell'esportazione di ortaggi.
+                         Da allora tale vocazione è stata custodita e tramandata
                         nel tempo, con la volontà di perfezionarci e farci
                         conoscere a livello nazionale ed internazionale.
                         Forte di questa eredità ci siamo specializzati nella
@@ -150,6 +152,7 @@
 <!-- call to action for social END-->
 </body>
 <!--footer with company's info-->
+<!--footer with company's info-->
 <footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center lg:flex-row-reverse" style="background: linear-gradient(17deg, rgba(66,6,66,1) 21%, rgba(200,14,188,1) 100%);">
     <!--Loghi-->
     <div class="flex m-5 justify-center">
@@ -160,7 +163,7 @@
  
   <!--Info-->
   <div class="text-center m-10">
-   <h1 class="m-2">Freschezze al volo di Piccione</h1>
+   <h1 class="m-2">Az. Agr. Freschezzalvolo di Piccione Leandro</h1>
    <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
 </div>
 <div class="flex flex-col justify-between items-center m-5 lg:flex-row">
