--- a/Project/index.html
+++ b/Project/index.html
@@ -110,7 +110,7 @@
                 <h2>_________</h2>
              
                <br>
-                <h1>Dopo aver investito in un nuovo progetto di filiera, <br> FreschezzaAlVolo si impegna a suopervisionare
+                <h1>Dopo aver investito in un nuovo progetto di filiera, FreschezzaAlVolo si impegna a suopervisionare
                      tutti i processi della catena agroalimentare,
                      partendo dalla colitivazione fino ad arrivare alla vendita diretta dei propri prodotti in modo da 
                      garantirne la qualità e coltivare
@@ -158,7 +158,7 @@
  
   <!--Info-->
   <div class="text-center m-10">
-   <h1 class="m-2">Freschezze al volo di Piccione</h1>
+   <h1 class="m-2">Az. Agr. Freschezzalvolo di Piccione Leandro</h1>
    <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
 </div>
 <div class="flex flex-col justify-between items-center m-5 lg:flex-row">
