--- a/Project/prodotti.html
+++ b/Project/prodotti.html
@@ -62,24 +62,24 @@
 <!--wrapper Elenco melanzane-->
          <div class="lg:flex lg:items-center lg:justify-between ">    
 
-             <ul class="text-center lg:text-5xl lg:flex " style="color: #71086e;">
-                <div class="shadow-lg border-1 border-black rounded-xl bg-amber-100 m-2">
+             <ul class="text-center lg:text-5xl lg:flex" style="color: #71086e;">
+                <div class="shadow-lg border-1 border-black rounded-xl m-2" style="background-color: #ffe894;">
                     <img src="./IMG/illustrazioni freschezze al volo/Melanzane Ridotte  icon/Melanzana Viola r_.png" alt="">
                 <li class="m-1"> <a href="#viola" class="text-2xl hover:underline scroll-smooth m-2">Melanzana Viola</a> </li>
             </div>
-            <div class="shadow-lg border-1 border-black rounded-xl bg-green-100 m-2">
+            <div class="shadow-lg border-1 border-black rounded-xl m-2" style="background-color: #95c57f;">
                 <img src="./IMG/illustrazioni freschezze al volo/Melanzane Ridotte  icon/Melanzana tonda R.png" alt="">
                 <li class="m-1"> <a href="#tonda" class="text-2xl hover:underline m-2">Melanzana Tonda</a> </li>
             </div>
-            <div class="shadow-lg border-1 border-black rounded-xl bg-amber-100 m-2">
+            <div class="shadow-lg border-1 border-black rounded-xl m-2" style="background-color: #ffe894;">
                 <img src="./IMG/illustrazioni freschezze al volo/Melanzane Ridotte  icon/melanzana striata R_.png" alt="">
                 <li class="m-1"> <a href="#striata" class="text-2xl hover:underline m-2">Melanzana Striata</a> </li>
             </div>
-            <div class="shadow-lg border-1 border-black rounded-xl bg-green-100 m-2">
+            <div class="shadow-lg border-1 border-black rounded-xl m-2" style="background-color: #95c57f;">
                 <img src="./IMG/illustrazioni freschezze al volo/Melanzane Ridotte  icon/Melanzana lunga  R.png" alt="">
                 <li class="m-1"> <a href="#lunga" class="text-2xl hover:underline m-2">Melanzana Lunga</a> </li>
             </div>
-            <div class="shadow-lg border-1 border-black rounded-xl bg-amber-100 m-2">
+            <div class="shadow-lg border-1 border-black rounded-xl m-2" style="background-color: #ffe894;">
                 <img src="./IMG/illustrazioni freschezze al volo/Melanzane Ridotte  icon/Melanzana Perlina  R.png" alt="">
                 <li class="m-1"> <a href="#perlina" class="text-2xl hover:underline  m-2">Melanzana Perlina</a> </li>
             </div>
@@ -390,6 +390,7 @@
 <!-- call to action for social END-->
 </body>
 <!--footer with company's info-->
+<!--footer with company's info-->
 <footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center lg:flex-row-reverse" style="background: linear-gradient(17deg, rgba(66,6,66,1) 21%, rgba(200,14,188,1) 100%);">
     <!--Loghi-->
     <div class="flex m-5 justify-center">
@@ -400,7 +401,7 @@
  
   <!--Info-->
   <div class="text-center m-10">
-   <h1 class="m-2">Freschezze al volo di Piccione</h1>
+   <h1 class="m-2">Az. Agr. Freschezzalvolo di Piccione Leandro</h1>
    <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
 </div>
 <div class="flex flex-col justify-between items-center m-5 lg:flex-row">
