--- a/Project/index.html
+++ b/Project/index.html
@@ -58,7 +58,7 @@
             
             <br><br>
             <div class="flex items-center justify-center mt-20 mb-10">
-                <img src="./IMG/Timbro Rotondo 100% Siciliana_.png" alt="timbro 100% azienda siciliana png">
+                <img src="./IMG/illustrazioni freschezze al volo/Timbro Rotondo 100% Siciliana_.png" alt="timbro 100% azienda siciliana png">
             </div>
 
         </div>
